2007-07-30  Sébastien Sablé  <sable@users.sourceforge.net>

	* freetds.h, setup.py: Corrections to compile with bcp-support
	against freetds thanks to Klaus-Martin Hansche (close tracker
	1724088)

	* MANIFEST.in: Added test suites to distribution

2007-07-23  Sébastien Sablé  <sable@users.sourceforge.net>

	* Better compliance with DBAPI: returns None in nextset when no
	more set

2007-05-22  Sébastien Sablé  <sable@users.sourceforge.net>

	* Add metadata for pypi

2007-05-15  Sébastien Sablé  <sable@users.sourceforge.net>

	* doc/installation.tex: Corrected documentation to compile with
	FreeTDS and Threads thanks to Derek Harland (close tracker
	1709043)

2007-02-28  Sébastien Sablé  <sable@users.sourceforge.net>

	* Added conversion from string to int when assigning to a
	CS_INT_TYPE DataBuf

	* Simplified API for CS_DATE_TYPE related functions

	* databuf.c: Corrected bug in databuf_alloc: Sybase reports the
	wrong maxlength for numeric type - verified with Sybase 12.5 -
	thanks to patch provided by Phil Porter

2007-02-26  Sébastien Sablé  <sable@users.sourceforge.net>

	* Added support for CS_DATE_TYPE

2007-05-03  Sébastien Sablé  <sable@users.sourceforge.net>

        * Releasing version 0.38

2007-02-02  Sébastien Sablé  <sable@users.sourceforge.net>

	* Releasing version 0.38pre2

	* Sybase.py: Add structured error information to
	Sybase.DatabaseError thanks to patch provided by Gregory Bond
	(close tracker 1631902)

	* Resurrected Sybase.Bulkcopy functionality thanks to patch
	provided by Gregory Bond (close tracker 1632916)

2007-01-29  Sébastien Sablé  <sable@users.sourceforge.net>

	* Corrected AttributeError when locking is off (close tracker
	1637942 reported by Jim Nusbaum)

2007-01-15  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Corrected incorrect type mx.DateTime.DateTime
	returned by Sybase.Date() in "mx" datetime mode. This type is not
	supported by DataBuf.

2007-01-11  Sébastien Sablé  <sable@users.sourceforge.net>
